<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddItem">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:adjustViewBounds="true"
        android:contentDescription="@string/previous_page_des"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_previous_page"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:contentDescription="@string/save_page_des"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_save"
        android:visibility="invisible"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />

    <EditText
        android:id="@+id/header"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:hint="@string/header"
        android:importantForAutofill="no"
        android:inputType="text|textAutoCorrect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_10"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toTopOf="@id/date" />

    <TextView
        android:id="@+id/symbolCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/symbol_count_label"
        app:layout_constraintBottom_toBottomOf="@id/slash"
        app:layout_constraintStart_toEndOf="@id/slash"
        app:layout_constraintTop_toTopOf="@id/slash" />

    <TextView
        android:id="@+id/symbolCount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="@id/symbolCountLabel"
        app:layout_constraintStart_toEndOf="@id/symbolCountLabel"
        app:layout_constraintTop_toTopOf="@id/symbolCountLabel" />

    <EditText
        android:id="@+id/body"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:gravity="start|top"
        android:hint="@string/body"
        android:importantForAutofill="no"
        android:inputType="text|textAutoCorrect|textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />
</androidx.constraintlayout.widget.ConstraintLayout>