<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_blue"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.0"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_5"
            android:adjustViewBounds="true"
            android:background="@drawable/btn_cancel_selector"
            android:contentDescription="@string/cancel_des"
            android:padding="@dimen/dimen_5"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12" />

        <TextView
            android:id="@+id/countLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_5"
            android:text="@string/items_count_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/count"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/selectAll"
            app:layout_constraintStart_toEndOf="@+id/countLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/selectAll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_5"
            android:adjustViewBounds="true"
            android:background="@drawable/btn_select_all_selector"
            android:contentDescription="@string/cancel_des"
            android:padding="@dimen/dimen_5"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_select_all"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addWrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/margin_20"
        android:paddingBottom="@dimen/margin_20"
        app:layout_constraintBottom_toTopOf="@id/deleteWrapper"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25">

        <com.example.notesapp.BtnAddItem
            android:id="@+id/addItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_add_selector"
            android:clickable="true"
            android:padding="@dimen/margin_15"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deleteWrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.0"
        android:paddingStart="@dimen/margin_15"
        android:paddingEnd="@dimen/margin_15"
        android:paddingBottom="@dimen/margin_15"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/btn_delete_selector"
            android:contentDescription="@string/delete_des"
            android:padding="@dimen/dimen_5"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>